--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
     font-size: 1rem;
 }
 .container {
-    margin: 0px 120px;
+    margin: 0px 180px;
     padding: 1rem;
 }
 #section-one > .container > .portlet {
@@ -22,4 +22,11 @@ body {
     column-gap: 1rem;
     padding: 1rem;
 
+}
+
+span.label {
+    background-color: rgb(231, 219, 219);
+    border-radius: 13px;
+    padding: 0.3rem 0.6rem;
+    font-size: 0.65rem;
 }
