--- a/style.css
+++ b/style.css
@@ -124,3 +124,51 @@ a {
     text-decoration: none;
     cursor: pointer;
 }
+
+@media screen and (max-width: 710px) {
+    .container {
+        margin: 0px 20px;
+    }
+    .portlet-body {
+        width: 440px;
+    }
+}
+@media screen and (max-width: 508px) {
+    .container {
+        margin: 0px 10px;
+    }
+    .portlet-body {
+        width: 90%;
+    }
+    h1.h1{
+        font-size: 1.5rem;
+    }
+    .welcome-text {
+        font-size: .87rem;
+    }
+}
+@media screen and (max-width: 475px) {
+    .container {
+        margin: 0px 5px;
+    }
+    .portlet-body {
+        width: 100%;
+    }
+    .card-header {
+        padding: 0px .5rem .5rem .5rem;
+    }
+    .card{
+        padding: 1rem;
+    }
+    h1.h1{
+        font-size: 1.2rem;
+    }
+}
+@media screen and (max-width: 298px) {
+    .portlet-head {
+        margin: 1.7rem 5px;
+    }
+    a > img.w-sm {
+        width: 80%;
+    }
+}
