--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ label {
     line-height: 2;
     margin-bottom: .25rem;
 }
-textarea {
+input, textarea {
     color: #1a202c;
     padding: 1rem;
     width: 90%;
